# HSI_KUKA

./: EndEffector.md  README.md
camera_calibration/: CMakeLists.txt  driver.py  package.xml
camera_calibration/src/: cppdriver.cpp  driver.launch  driver.py
camera_calibration_nodes/: CMakeLists.txt  camera_calibration_instructions.md  package.xml
camera_calibration_nodes/src/: cppdriver.cpp  driver.launch  driver.py
checkerboard/launch/: moveit_checkerboard_motion.launch  moveit_checkerboard_motion_new.launch  moveit_initial_motion.launch
checkerboard/src/: checkerboard_motion.py  checkerboard_motion_new.py  checkerboard_publisher.py  initial_motion.py
lbr_photonfocus_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
lbr_photonfocus_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  photonfocus_camera.srdf  ros_controllers.yaml
lbr_photonfocus_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  photonfocus_camera_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
med7pf_description/launch/: med7pf_upload.launch
med7pf_description/urdf/: med7pf.urdf.xacro
med7pf_gazebo/launch/: med7pf_gazebo.launch  med7pf_world.launch
med7pf_moveit/: .setup_assistant  package.xml
med7pf_moveit/config/: med7pf.srdf  ompl_planning.yaml  ros_controllers.yaml
med7pf_moveit/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  move_group.launch  moveit_planning_execution.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  setup_assistant.launch  trajectory_execution.launch.xml
med7pf_moveit_config/: .setup_assistant  package.xml
med7pf_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  med7pf.srdf  ros_controllers.yaml
med7pf_moveit_config/launch/: demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit_planning_execution.launch  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
nodes/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
nodes/src/: ihsikuka_viewer_publisher.py  ihsikuka_viewer_subscriber.py  middleman.py  nodes.launch  package.xml
pf_ros/: CMakeLists.txt  package.xml
pf_ros/launch/: nodes.launch  pf_ros.launch
pf_ros/scripts/: camera_publisher.py  checkerboard_publisher.py  ihsikuka_viewer_publisher.py  ihsikuka_viewer_subscriber.py  image_saver_subscriber.py  middleman.py
photonfocus_camera_description/meshes/: virtual_link_1.stl
photonfocus_camera_description/urdf/: photonfocus_camera.gazebo  photonfocus_camera.xacro
